homework about html and css

--- a/code/index.html
+++ b/code/index.html
@@ -10,164 +10,145 @@
     <link rel="stylesheet" href="stylesheets/style.css" >
 </head>
 <body>
-	<header>
+
 		<div class="header-background">
-			<div class="1st-section">
-			  <div class="logo">LOGO</div>
-		    <ul class="nav">
-				  <li role="navigation"><a href="#">Agents</a></li>
-			  	<li role="navigation"><a href="#">Login</a></li>
-				  <li>
-					  <button type="button" class="btn1">Sign up</button>
-				  </li>
-			  </ul>
+			<div class="par">
+				<ul>
+			    <li>LOGO</li>
+				  <li>Sign up</li>
+			  	<li>Login</li>
+					<li>Agents</li>
+				</ul>
 		  </div>
-			<div class="2nd-section">
-				<p align="center">Relax,Finding An Agent Just Got Easier</p>
-			</div>
-			<div class"other">
+
+			<div class="part">
+				<h1 align="center">Relax,Finding An Agent Just Got Easier</h1>
 				<p align="center">Receive proposals from best agents for free</p>
-			</div>
-			<div class="3rd-section">
-				<input type="text" placeholder="Enter Suburb">
+			<div class="an">
+
+				<input type="text" placeholder="Enter Suburb"></input>
 				<button type="button" class="btn2">SEARCH</button>
 			</div>
-			<div class="4th-section">
-				<ul class="num">
-					<li>20,000</li>
-					<li>1,723,000</li>
-					<li>17,000</li>
-				</ul>
 			</div>
 		</div>
 		<div class="middle">
-			<div class="how">
-				<p align="center">HOW IT WORKS</p>
-				<section class="teaser col-1-3">
-					<img src="/images/card.png" alt="card">
-					<p>Compare</p>
-					<p>Compare every agent from each other as
-					</p>
-					<p>possible as you can.Every agent has its
-					</p>
-					<p>own advantages,and of course disadvantages.
-					</p>
-					<p>Compare always do good.
-          </p>
-				</section>
-				<section class="teaser col-2-3">
-					<img src="/images/pencil.png" alt="pencil">
-					<p>Receive Proposals</p>
-					<p>Ask for suggestions from people have experience
-					</p>
-					<p>is a great idea.They make give you some useful
-					</p>
-					<p>advices!
-					</p>
-				</section>
-				<section class="teaser col-3-3">
-					<img src="/images/users.png" alt="users">
-					<p>Cooperate</p>
-					<p>Cooperate with others will really do good,
-					</p>
-					<p>since you can help each other and get help
-					</p>
-					<p>when you are in trouble!
-					</p>
-				</section>
+			<div class="num">
+				<ul>
+					<li>
+						<p class="number">20,000</p>
+						<p class="item">Agents</p>
+					</li>
+					<li>
+						<p class="number">1,723,000</p>
+						<p class="item">Transactions</p>
+					</li>
+					<li>
+						<p class="number">17,000</p>
+						<p class="item">Agencies</p>
+					</li>
+					<li>
+						<p class="number">10,200</p>
+						<p class="item">Suburbs</p>
+					</li>
+				</ul>
 			</div>
+
+
+			<div class="how">
+				<h2 align="center">HOW IT WORKS</h2>
+				<div class="how_content">
+        <div class="item">
+					<p class="icon">1</p>
+					<img src="images/card.png" alt="card">
+					<h3>Compare</h3>
+					<p>Compare every agent from each other as possible as you can.Compare always do good.
+					</p>
+        </div>
+				<div class="item">
+					<p class="icon">2</p>
+					<img src="images/pencil.png" alt="pencil">
+					<h3>Receive Proposals</h3>
+					<p>Ask for suggestions from other people.They make give you some useful advices!
+					</p>
+			 </div>
+			 <div class="item">
+ 				<p class="icon">3</p>
+					<img src="images/users.png" alt="users">
+					<h3>Cooperate</h3>
+					<p>Cooperate with others since you can help each other when you are in trouble!
+					</p>
+				</div>
+			</div>
+		</div>
 
 
 
 			<div class="why">
-				<p align="center">WHY CHOOSE US?</p>
-				<section class="1part 1-1">
-					<img src="/images/icon-check.png" alt="check">
-					<p>Quick</p>
-					<p>Having an agent on your side while you are searching for a home
-					</p>
-					<p>can speed up the process, and also ensure that you’re getting
-					</p>
-					<p>the best deal possible. And if you have a deadline to
-					</p>
-					<p>meet,you need the fastest service possible.
-					</p>
-				</section>
+				<h2 align="center">WHY CHOOSE US?</h2>
+				<div class="item">
+					<img src="images/icon-check.png" alt="check">
+					<div class="text">
+					  <h3>Quick</h3>
+					  <p>Having an agent on your side while you are searching for a home can speed up the process, and also ensure that you’re getting the best deal possible. And if you have a deadline to meet,you need the fastest service possible.
+						</p>
+			    </div>
+				</div>
 
-				<section class="1part 1-2">
-					<img src="/images/icon-tag.png" alt="tag">
-					<p>Free</p>
-					<p>Purchasing a home without and agent can lead to some very
-					</p>
-					<p>difficult situations for the average person.An advantage
-					</p>
-					<p>to hiring a real estate agent is that they can be
-					</p>
-					<p>there to explain everything to you.
-					</p>
-				</section>
+        <div class="item">
+					<img src="images/icon-tag.png" alt="tag">
+					<div class="text">
+					 <h3>Free</h3>
+					 <p>Purchasing a home without and agent can lead to some very difficult situations for the average person.An advantage to hiring a real estate agent is that they can be there to explain everything to you.
+					 </p>
+				 </div>
+			 </div>
 
-				<section class="2part 2-1">
-					<img src="/images/icon-cycle.png" alt="cycle">
-					<p>Easy</p>
-					<p>If you ever were to run into any terminology you were unable
-					</p>
-					<p>to understand, or if you were to run into any unexpected
-					</p>
-					<p>bumps, you may just end up finding yourself up a
-					</p>
-					<p>creek without a paddle.
-					</p>
-				</section>
+       <div class="item">
+					<img src="images/icon-cycle.png" alt="cycle">
+				  <div class="text">
+					  <h3>Easy</h3>
+					  <p>If you ever were to run into any terminology you were unable to understand, or if you were to run into any unexpected bumps, you may just end up finding yourself up a creek without a paddle.
+					  </p>
+				  </div>
+				</div>
 
-				<section class="2part 2-2">
-					<img src="/images/icon-user.png" alt="user">
-					<p>Cheap</p>
-					<p>But if you had a real estate agent on your side, you’d be
-					</p>
-					<p>sure to have a guide through ever last bit of your
-					</p>
-					<p>home search.And our agent costs a little
-					</p>
-					<p>compared with others.
-					</p>
-				</section>
+				<div class="item">
+					<img src="images/icon-user.png" alt="user">
+					<div class="text">
+					 <h3>Cheap</h3>
+					 <p>But if you had a real estate agent on your side, you’d be sure to have a guide through ever last bit of your home search.And our agent costs a little compared with others.
+					 </p>
+				  </div>
+				</div>
 
-				<section class="3part 3-1">
-					<img src="/images/icon-clipboard.png" alt="clipboard">
-					<p>Social</p>
-					<p>A real estate agent on your side while you’re searching for
-					</p>
-					<p>a home can be a huge advantage for you, as they are
-					</p>
-					<p>able to explain things to you, help you
-					</p>
-					<p>find your dream home.
-					</p>
-				</section>
+				<div class="item">
+					<img src="images/icon-clipboard.png" alt="clipboard">
+					<div class="text">
+					 <h3>Social</h3>
+					 <p>A real estate agent on your side while you’re searching for a home can be a huge advantage for you, as they are able to explain things to you, help you find your dream home.
+					 </p>
+				  </div>
+				</div>
 
-				<section class="3part 3-2">
-					<img src="/images/icon-thumbs.png" alt="thumbs">
-					<p>Convenient</p>
-					<p>All in all,the wrong agent can be detrimental to your search,
-					</p>
-					<p>as they will run the chance of putting you into the
-					</p>
-					<p>wrong home, and putting you into debt,
-					</p>
-					<p>so come with us!
-					</p>
-				</section>
+				<div class="item">
+					<img src="images/icon-thumbs.png" alt="thumbs">
+					<div class="text">
+					 <h3>Convenient</h3>
+					 <p>All in all,the wrong agent can be detrimental to your search,as they will run the chance of putting you into the wrong home, and putting you into debt,so come with us!
+					 </p>
+				  </div>
+				</div>
 
 			</div>
 
 			<div class="test">
+				<div class="anniu">
         <button type="button" class="btn3">Testimonials</button>
 				<button type="button" class="btn4">Recent Feedbacks</button>
+			</div>
 				<p>Like glitter's raining on me You like a shot of pure gold I think
 					I'm 'bout to explore Like glitter's raining on me You like a shot
-				</p>
-			  <p>of pure gold I think I'm 'bout to explore
+				of pure gold I think I'm 'bout to explore
 				</p>
 				<div class="picture">
 					<img src="images/face1.jpg" alt="img1">
@@ -178,17 +159,17 @@
 
 			</div>
 		</div>
-	</header>
 
-	<footer>
+
+
 		<div class="footer-background">
-			<div class="input">
-				<p>Find An Agent
-					 <input type="text">
+    <div class="in">
+				<span>Find An Agent</span>
+					 <input type="text" placeholder="Enter Suburb"></input>
 					 <button type="button" class="btn5">SEARCH</button>
-				</p>
-			</div>
 		</div>
+		</div>
+
 		<div class="footer-nav">
 			<ul class="list">
 				<li>Blog</li>
@@ -204,6 +185,6 @@
 
 
 
-  </footer>
+
 </body>
 </html>
